{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 176,
  "lineage": "1303328d-34f4-13fd-afd5-0061b69aac7f",
  "resources": [
    {
      "module": "module.elastic-ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips_iddev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat_gateway",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fffdb6f03cdc2ddb",
            "arn": "arn:aws:ec2:us-east-1:125480470368:elastic-ip/eipalloc-0fffdb6f03cdc2ddb",
            "domain": "vpc",
            "id": "eipalloc-0fffdb6f03cdc2ddb",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-199-129-43.compute-1.amazonaws.com",
            "public_ip": "34.199.129.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "CostCenter": "1234",
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "eip-nat",
              "Owner": "infra"
            },
            "tags_all": {
              "CostCenter": "1234",
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "eip-nat",
              "Owner": "infra"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.internet-gtw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_teste",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:internet-gateway/igw-0b5a24a3261acc1bb",
            "id": "igw-0b5a24a3261acc1bb",
            "owner_id": "125480470368",
            "tags": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "igw-jddev",
              "Owner": "infra"
            },
            "tags_all": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "igw-jddev",
              "Owner": "infra"
            },
            "vpc_id": "vpc-0bffca5794ed8de14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gtw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw_teste",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fffdb6f03cdc2ddb",
            "association_id": "eipassoc-00ba06ff6c17305d3",
            "connectivity_type": "public",
            "id": "nat-09984c0e97ff58ef1",
            "network_interface_id": "eni-02e8c57e4234f5640",
            "private_ip": "10.37.0.234",
            "public_ip": "34.199.129.43",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a2549c7ad7d3f705",
            "tags": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "nat-gtw-jddev",
              "Owner": "infra"
            },
            "tags_all": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "nat-gtw-jddev",
              "Owner": "infra"
            }
          },
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_iddev",
            "module.internet-gtw.aws_internet_gateway.igw_teste",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_iddev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg_teste",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:security-group/sg-077b325935917e52e",
            "description": "Security Group teste",
            "egress": [],
            "id": "sg-077b325935917e52e",
            "ingress": [],
            "name": "sg_teste",
            "name_prefix": "",
            "owner_id": "125480470368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "sg_teste",
              "Owner": "security",
              "Project": "opc"
            },
            "tags_all": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "sg_teste",
              "Owner": "security",
              "Project": "opc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bffca5794ed8de14"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg_teste-ingress-cc0086039e26a067e1c818ecd938adbb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permitir trafego de saida",
            "from_port": 0,
            "id": "sgrule-1223032040",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-077b325935917e52e",
            "security_group_rule_id": "sgr-0862a17e402850ff5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.sg_iddev",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg_teste-ingress-dc1d6e4deee7b94af44b55452deb1b47",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Permitir trafego de entrada para via web",
            "from_port": 80,
            "id": "sgrule-639808507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-077b325935917e52e",
            "security_group_rule_id": "sgr-0b8a7dcb04a0215a1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.sg_iddev",
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-06af1d5bc3f1b31c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.37.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06af1d5bc3f1b31c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "teste-subnet-private1-us-east-1a",
              "Owner": "infra"
            },
            "tags_all": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "teste-subnet-private1-us-east-1a",
              "Owner": "infra"
            },
            "vpc_id": "vpc-0bffca5794ed8de14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-0914502c17de00a20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.37.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0914502c17de00a20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "teste-subnet-private2-us-east-1b",
              "Owner": "infra"
            },
            "tags_all": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "teste-subnet-private2-us-east-1b",
              "Owner": "infra"
            },
            "vpc_id": "vpc-0bffca5794ed8de14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-0a2549c7ad7d3f705",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.37.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2549c7ad7d3f705",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "teste-subnet-public1-us-east-1a",
              "Owner": "infra"
            },
            "tags_all": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "teste-subnet-public1-us-east-1a",
              "Owner": "infra"
            },
            "vpc_id": "vpc-0bffca5794ed8de14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-0de7d3ac5dac8c586",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.37.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de7d3ac5dac8c586",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "teste-subnet-public2-us-east-1b",
              "Owner": "infra"
            },
            "tags_all": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "teste-subnet-public2-us-east-1b",
              "Owner": "infra"
            },
            "vpc_id": "vpc-0bffca5794ed8de14"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_teste"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_teste",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:vpc/vpc-0bffca5794ed8de14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.37.0.0/18",
            "default_network_acl_id": "acl-056430ec35cbdcbb5",
            "default_route_table_id": "rtb-0da1ed10d6cda5589",
            "default_security_group_id": "sg-0f4942e8f10d339d1",
            "dhcp_options_id": "dopt-06d1899ad1c6ada91",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bffca5794ed8de14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da1ed10d6cda5589",
            "owner_id": "125480470368",
            "tags": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "vpc-jddev",
              "Owner": "infra"
            },
            "tags_all": {
              "Domain": "jddev",
              "Environment": "dev",
              "Managedby": "terraform",
              "Name": "vpc-jddev",
              "Owner": "infra"
            }
          }
        }
      ]
    }
  ]
}